kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blaise-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blaise-server
  template:
    metadata:
      labels:
        app: blaise-server
    spec:
      containers:
      - name: blaise-server
        image: replaceme
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 4443
          name: api
