kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blaise-server
  namespace: pascalcoin
spec:
  type: ClusterIP
  ports:
  - port: 4443
    targetPort: 4443
    name: api
  selector:
    app: blaise-server
